// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Expense Report - Approval Tests > should generate a html report > with no expenses 1`] = `
"<!DOCTYPE html>
<html>
<head>
<title>Expense Report: {{DATE}}</title>
</head>
<body>
<h1>Expense Report: {{DATE}}</h1>
<table>
<thead>
<tr><th scope="col">Type</th><th scope="col">Amount</th><th scope="col">Over Limit</th></tr>
</thead>
<tbody>
</tbody>
</table>
<p>Meal Expenses: 0</p>
<p>Total Expenses: 0</p>
</body>
</html>
"
`;

exports[`Expense Report - Approval Tests > should generate a html report > with under and over limit expenses 1`] = `
"<!DOCTYPE html>
<html>
<head>
<title>Expense Report: {{DATE}}</title>
</head>
<body>
<h1>Expense Report: {{DATE}}</h1>
<table>
<thead>
<tr><th scope="col">Type</th><th scope="col">Amount</th><th scope="col">Over Limit</th></tr>
</thead>
<tbody>
<tr><td>Dinner</td><td>3000</td><td> </td></tr>
<tr><td>Breakfast</td><td>500</td><td> </td></tr>
<tr><td>Car Rental</td><td>10000</td><td> </td></tr>
<tr><td>Dinner</td><td>5001</td><td>X</td></tr>
<tr><td>Breakfast</td><td>1001</td><td>X</td></tr>
<tr><td>Car Rental</td><td>9007199254740991</td><td> </td></tr>
</tbody>
</table>
<p>Meal Expenses: 9502</p>
<p>Total Expenses: 9007199254760492</p>
</body>
</html>
"
`;

exports[`Expense Report - Approval Tests > should generate a plain text report > with no expenses 1`] = `
"Expense Report: {{DATE}}
Meal Expenses: 0
Total Expenses: 0
"
`;

exports[`Expense Report - Approval Tests > should generate a plain text report > with under and over limit expenses 1`] = `
"Expense Report: {{DATE}}
Dinner	3000	 
Breakfast	500	 
Car Rental	10000	 
Dinner	5001	X
Breakfast	1001	X
Car Rental	9007199254740991	 
Meal Expenses: 9502
Total Expenses: 9007199254760492
"
`;
